# GSRL

./: .gitignore  CMakeLists.txt  REFEREE_DEV_DOC.md  RENAME_PROJECT.py  flash.cfg
.eide/: eide.yml
.github/workflows/: stm32-build.yml
CubeMX_BSP/: .mxproject  CMakeLists.txt  HerKules_Framework.ioc  STM32H723XG_FLASH.ld
CubeMX_BSP/Core/Src/: dma.c  freertos.c
CubeMX_BSP/Core/Src/Backup/: fdcan.c.bak  gpio.c.bak
CubeMX_BSP/Inc/: main.h  stm32h7xx_it.h
CubeMX_BSP/Src/: gpio.c  main.c  spi.c  stm32h7xx_it.c  tim.c  usart.c
GSRL/: CMakeLists.txt
GSRL/Device/inc/: dvc_imu.hpp  dvc_motor.hpp  dvc_referee.hpp  dvc_remotecontrol.hpp
GSRL/Device/src/: dvc_imu.cpp  dvc_motor.cpp  dvc_referee.cpp  dvc_remotecontrol.cpp
GSRL/Documentation/Device/: J60Motor.md  REFEREE_DEV_DOC.md  WHEELTEC_H30_Driver.md
GSRL/Driver/inc/: drv_can.h
GSRL/Driver/src/: drv_can.c
Task/src/: tsk_test.cpp
cmake/: gcc-arm-none-eabi.cmake  generate-config.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
cmake/templates/: .lazy.lua.in  flash.cfg.in  launch.json.in  settings.json.in
